update readme, sort hard coded values

--- a/roles/infra/wait-for-hosts/tasks/main.yml
+++ b/roles/infra/wait-for-hosts/tasks/main.yml
@@ -7,7 +7,7 @@
     ansible_connection: ssh
     ansible_host: "{{ hostvars[item]['ansible_host'] }}"
     ansible_user: "ubuntu"
-    ansible_ssh_private_key_file: "~/.ssh/id_flexi"
+    ansible_ssh_private_key_file: "{{ hostvars[item]['vm_private_key_file'] }}"
     ansible_python_interpreter: auto_legacy
     ansible_ssh_common_args: "{{ hostvars[item]['ansible_ssh_common_args'] }}"
   with_items:
