--- a/group_vars/servers/servers.yml
+++ b/group_vars/servers/servers.yml
@@ -1,11 +1,13 @@
 ---
 kubernetes_version: v1.26.7
-capi_image_name: ubuntu-2204-kube-v1.26.7
+capi_image_name: ubuntu-2204-kube-v1.26.7 #ubuntu-2204-kube-v1.26.7 rocky-89-kube-v1.22.17
 
 capi_provider_version: v0.8.0
 
-cluster_name: training-env-management
+cluster_name: CLUSTER_NAME
 cluster_namespace: default
+
+cluster_network: NeSI_RDC_PROJECT_NAME
 
 openstack_ssh_key: NeSI_RDC_KEYPAIR_NAME
 
