updates for Rocky

--- a/roles/capi-cluster/workload/tasks/configure-install-clusterctl.yml
+++ b/roles/capi-cluster/workload/tasks/configure-install-clusterctl.yml
@@ -44,13 +44,13 @@
     --from /tmp/cluster-template.yml > /tmp/{{ cluster_name }}.yml
   become: true
 
+- name: Workload | Wait for Kind cluster to settle
+  pause:
+    seconds: 30
+
 - name: Workload | Init {{ cluster_name }} clusterctl yaml 
   shell: >-
     kubectl apply -f /tmp/{{ cluster_name }}.yml
-  retries: 3
-  delay: 10
-  register: result
-  until: result.rc == 0
   become: true
 
 - name: Workload | Wait for {{ cluster_name }} control plane to return true
