add edfault security group to cluster

--- a/roles/capi-cluster/workload/files/cluster-template.yml
+++ b/roles/capi-cluster/workload/files/cluster-template.yml
@@ -135,6 +135,8 @@ spec:
         name: ${CLUSTER_NAME}-cloud-config
       image: ${OPENSTACK_IMAGE_NAME}
       sshKeyName: ${OPENSTACK_SSH_KEY_NAME}
+      securityGroups:
+      - name: default
       ports:
       - network:
           name: ${CLUSTER_NETWORK}
@@ -153,6 +155,8 @@ spec:
         name: ${CLUSTER_NAME}-cloud-config
       image: ${OPENSTACK_IMAGE_NAME}
       sshKeyName: ${OPENSTACK_SSH_KEY_NAME}
+      securityGroups:
+      - name: default
       ports:
       - network:
           name: ${CLUSTER_NETWORK}
