fix for K8s repos being removed

--- a/roles/ansible-kind/tasks/prerequisites.yml
+++ b/roles/ansible-kind/tasks/prerequisites.yml
@@ -5,8 +5,11 @@
     state: present
   become: true
   with_items:
-    - https://packages.cloud.google.com/apt/doc/apt-key.gpg
     - https://download.docker.com/linux/ubuntu/gpg
+
+- name: Add K8s apt keys
+  shell:
+    curl -fsSL https://pkgs.k8s.io/core:/stable:/v{{ k8s_bootstrap_version }}/deb/Release.key | sudo gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
 
 - name: Add repositories
   apt_repository:
@@ -15,7 +18,10 @@
   become: true
   with_items:
     - "deb https://download.docker.com/linux/ubuntu focal stable"
-    - "deb https://apt.kubernetes.io/ kubernetes-xenial main"
+
+- name: Add K8s apt repos
+  shell:
+    echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v{{ k8s_bootstrap_version }}/deb/ /' | sudo tee /etc/apt/sources.list.d/kubernetes.list
 
 - name: Install prerequisite Packages
   apt:
