--- a/roles/ansible-kind/defaults/main.yml
+++ b/roles/ansible-kind/defaults/main.yml
@@ -4,6 +4,8 @@ bin_dir: /usr/local/bin
 kind_version: latest
 cluster_name: kind
 
+k8s_bootstrap_version: 1.29
+
 clusterctl_version: v1.5.1
 clusterctl_provider: openstack
 
