--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,4 @@ terraform/terraform.tfstate
 terraform/terraform.tfstate.backup
 group_vars/servers/servers.yml
 host.ini
-clouds.yml
+terraform/clouds.yml
