update the openstack CAPI version to be pinned to 0.11.4

--- a/roles/cluster-ctl/initialize/default/main.yml
+++ b/roles/cluster-ctl/initialize/default/main.yml
@@ -3,5 +3,6 @@ bin_dir: /usr/local/bin
 
 clusterctl_version: v1.7.1
 clusterctl_provider: openstack
+clusterctl_provider_version: v0.11.4
 
 clouds_yaml_location: ~/.config/openstack/clouds.yaml
