--- a/roles/cluster-ctl/initialize/tasks/main.yml
+++ b/roles/cluster-ctl/initialize/tasks/main.yml
@@ -8,6 +8,6 @@
 
 - name: Initialize | Initialize the management cluster
   shell: >-
-    clusterctl init --infrastructure {{ clusterctl_provider }}
+    clusterctl init --infrastructure {{ clusterctl_provider }}:{{ clusterctl_provider_version }}
   become: true
   when: not (pod_list.resources | length > 0)
