--- a/roles/capi-cluster/management/tasks/main.yml
+++ b/roles/capi-cluster/management/tasks/main.yml
@@ -8,7 +8,7 @@
 
 - name: Management | Install Openstack management for {{ cluster_name }}
   shell: >-
-    clusterctl --kubeconfig /tmp/{{ cluster_name }}.kubeconfig init --infrastructure openstack
+    clusterctl --kubeconfig /tmp/{{ cluster_name }}.kubeconfig init --infrastructure {{ clusterctl_provider }}:{{ clusterctl_provider_version }}
   become: true
   when:
     - capo_system_pods.stdout != "1"
