major updates and changes to the new CAPI based code bringing in ORC and all the new CCM

--- a/group_vars/servers/servers.yml.example
+++ b/group_vars/servers/servers.yml.example
@@ -1,16 +1,19 @@
 ---
-k8s_bootstrap_version: 1.29
+k8s_bootstrap_version: 1.33
 
-kubernetes_version: v1.28.5
-capi_image_name: rocky-89-kube-v1.28.5
+kubernetes_version: v1.33.3
+capi_image_name: rocky-9-containerd-v1.33.3
 
-capi_provider_version: v0.8.0
-clusterctl_version: v1.8.3
+clusterctl_version: v1.10.4
+clusterctl_provider_version: v0.12.4
 
 cluster_name: CLUSTER_NAME
 cluster_namespace: default
 
 cluster_network: NeSI_RDC_PROJECT_NAME
+
+network_id: 05669c0e-d973-41f2-bff4-d8568bb2a711
+router_id: dfbd2804-6908-41b1-b05e-aeae26585c9a
 
 openstack_ssh_key: NeSI_RDC_KEYPAIR_NAME
 
@@ -22,7 +25,7 @@ worker_flavour: balanced1.2cpu4ram
 
 cluster_node_cidr: 10.30.0.0/24
 
-cluster_pod_cidr: 172.168.0.0/16
+cluster_pod_cidr: 172.16.0.0/16
 
 bin_dir: /usr/local/bin
 
@@ -31,6 +34,8 @@ clouds_yaml_local_location: ~/.config/openstack/clouds.yaml
 capi_managed_secgroups: true
 
 yaml_openstack_cloud: openstack
+
+cloud_provider_openstack_version: 1.33
 
 source_ips:
   - 163.7.144.0/21
