--- a/roles/cluster-ctl/initialize/tasks/main.yml
+++ b/roles/cluster-ctl/initialize/tasks/main.yml
@@ -11,3 +11,9 @@
     clusterctl init --infrastructure {{ clusterctl_provider }}:{{ clusterctl_provider_version }}
   become: true
   when: not (pod_list.resources | length > 0)
+
+- name: Initialize | Install Openstack Resource Controller (ORC) CRD's
+  shell: >-
+    kubectl apply --server-side -f https://github.com/k-orc/openstack-resource-controller/releases/download/{{ orc_version }}/install.yaml
+  become: true
+  when: not (pod_list.resources | length > 0)
