Generate the kubeconfig file on the ansible host

--- a/roles/capi-cluster/management/tasks/main.yml
+++ b/roles/capi-cluster/management/tasks/main.yml
@@ -40,8 +40,16 @@
   when:
     - capo_system_pods.stdout != "1"
 
-- name: Management | Print {{ cluster_name }}.kubeconfig to console
-  debug:
-    msg: "{{kubeconfig_output.stdout_lines}}"
+# - name: Management | Print {{ cluster_name }}.kubeconfig to console
+#   debug:
+#     msg: "{{kubeconfig_output.stdout_lines}}"
+#   when:
+#     - capo_system_pods.stdout != "1"
+
+- name: Management | Write {{ cluster_name }}.kubeconfig to localhost
+  delegate_to: localhost
+  ansible.builtin.copy:
+    content: "{{kubeconfig_output.stdout}}"
+    dest: "{{ cluster_name }}.kubeconfig"
   when:
     - capo_system_pods.stdout != "1"
