Change the seed vm to use k3s instead of kind

--- a/ansible-kind.yml
+++ b/ansible-kind.yml
@@ -9,7 +9,7 @@
   become_user: root
   any_errors_fatal: "true"
   roles:
-    - { role: ansible-kind }
+    - { role: ansible-k3s }
     - { role: cluster-ctl/cli-install }
     - { role: cluster-ctl/initialize }
     - { role: capi-cluster/workload }
