Fix typo in variable name

--- a/roles/ansible-k3s/defaults/main.yml
+++ b/roles/ansible-k3s/defaults/main.yml
@@ -2,7 +2,7 @@
 bin_dir: /usr/local/bin
 
 kubernetes_version: v1.33.3
-k3s_version: "{{ kuberentes_version }}+k3s1"
+k3s_version: "{{ kubernetes_version }}+k3s1"
 
 clusterctl_version: v1.10.4
 clusterctl_provider: openstack
